tests/snapshots/compiler_error_fixtures/named_field_missing_e460.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/named_field_missing_e460.flx
== compile ==
failed (compile)
== diagnostics ==
error[E460]: Missing Named Field

Missing field `y` in `Point` constructor.

  examples/compiler_errors/named_field_missing_e460.flx:13:13
   |
13 |     let p = Point { x: 1 }
   |             ^^^^^^^^^^^^^^
== stdout ==
<not executed>
